--- a/main.css
+++ b/main.css
@@ -4,7 +4,9 @@
   width:480px;
   height:680px;
   border:1px solid;
-  background-color:rgb(94, 94, 255);
+  background-color:rgb(94, 94, 255);  
+  transform: translate3d(0, 0, 0);
+
 }
 .question{
   position: relative;
@@ -14,21 +16,43 @@
   vertical-align: bottom;
 }
 .answers{
+    position: relative;
+    height: 400px;
+    width: 400px;
+    margin: 0 auto;
+}
+
+.answers.big li > div{
+    height:140px;
+    width:140px;
+    line-height: 140px;
+    margin-left: -73px;
+    margin-top: -73px;
+    font-size:36pt;
+}
+
+.answers li > div{
+    height: 80px;
+    width: 80px;
+    border-radius: 50%;
+    border: 3px solid white;
     text-align: center;
+    line-height: 80px;
+    background-color: rgba(135, 240, 234, 0.27);
+    margin-left: -43px;
+    margin-top: -43px;
+}
+.answers li div.text{
+    font-size:70%;
 }
 .answers li{
-  font-size: 22pt;
-  width: 120px;
-  display:inline-block;
-  border-radius:50%;
-  border:3px solid white;
-  height: 120px;
-  margin: 5px 18px;
-  text-align: center;
-  vertical-align: middle;
-  line-height: 120px;
-  background-color: rgba(135, 240, 234, 0.27);
-  -webkit-animation-duration: 0.74s;
+    font-size: 22pt;
+    margin: 0;
+    height: 0;
+    width: 0;
+    position: absolute;
+    left: 50%;
+    top: 50%;
 }
 
 
