--- a/main.css
+++ b/main.css
@@ -1,8 +1,11 @@
+html,body,#all,.question-container{
+    height:100%;
+    width:100%;
+    overflow: hidden;
+}
 .question-container{
   font-family: Helvetica;
   color:white;
-  width:480px;
-  height:680px;
   border:1px solid;
   background-color:rgb(94, 94, 255);  
   transform: translate3d(0, 0, 0);
@@ -14,6 +17,9 @@
   height: 35%;
   text-align: center;
   vertical-align: bottom;
+}
+.question span{
+    text-shadow: 0px 55px 67px rgba(0,0,0,0.55), 0px 2px 3px rgba(0,0,0,0.3);
 }
 .answers{
     position: relative;
@@ -42,9 +48,18 @@
     margin-left: -43px;
     margin-top: -43px;
 }
-.answers li div.text{
+.answers li div div.text{
     font-size:70%;
 }
+
+.answers li div div {
+    /* not sure about this bit: */
+    -webkit-box-shadow: 0px 174px 91px -5px rgba(0,0,0,0.25);
+    -moz-box-shadow: 0px 174px 91px -5px rgba(0,0,0,0.25);
+    box-shadow: 0px 58px 91px -5px rgba(0,0,0,0.25);
+    border-radius: 50%;
+}
+
 .answers li{
     font-size: 22pt;
     margin: 0;
@@ -65,6 +80,6 @@ span.question-text {
     position: absolute;
     left: 0;
     right: 0;
-    top: 150px;
+    top: 40%;
     transition:0.3s;
 }
