--- a/main.css
+++ b/main.css
@@ -1,3 +1,7 @@
+*{
+    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+    -webkit-tap-highlight-color: transparent; // i.e. Nexus5/Chrome and Kindle Fire HD 7''
+}  
 html,body,#all,.question-container{
     height:100%;
     width:100%;
@@ -18,16 +22,24 @@ html,body,#all,.question-container{
   text-align: center;
   vertical-align: bottom;
 }
-.question span{
-    text-shadow: 0px 55px 67px rgba(0,0,0,0.55), 0px 2px 3px rgba(0,0,0,0.3);
-}
+
 .answers{
-    position: relative;
-    height: 400px;
-    width: 400px;
+    height: 0;
     margin: 0 auto;
+    position:relative;
+    max-width:300px;
+    margin-top:180px
 }
 
+@media (max-width: 384px) {
+    .answers{
+        max-width: 220px;
+    }
+}
+
+.answers.big{
+    margin-top:120px
+}
 .answers.big li > div{
     height:140px;
     width:140px;
@@ -38,6 +50,7 @@ html,body,#all,.question-container{
 }
 
 .answers li > div{
+    cursor: pointer;
     height: 80px;
     width: 80px;
     border-radius: 50%;
@@ -71,10 +84,6 @@ html,body,#all,.question-container{
 }
 
 
-.out span.question-text{
-  top:750px;
-  opacity: 0.5;
-}
 span.question-text {
     font-size: 24pt;
     position: absolute;
@@ -82,4 +91,6 @@ span.question-text {
     right: 0;
     top: 40%;
     transition:0.3s;
+    padding:0 40px;
+    text-shadow: 0px 26px 67px rgba(0,0,0,0.55), 0px 2px 3px rgba(0,0,0,0.15);
 }
