--- a/client/animate.css
+++ b/client/animate.css
@@ -14,6 +14,11 @@ Copyright (c) 2015 Daniel Eden
   animation-fill-mode: both;
 }
 
+.animated.fast {
+    -webkit-animation-duration: 0.35s;
+    animation-duration: 0.35s;
+}
+
 .animated.infinite {
   -webkit-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
