--- a/client/animate.css
+++ b/client/animate.css
@@ -19,6 +19,16 @@ Copyright (c) 2015 Daniel Eden
     animation-duration: 0.35s;
 }
 
+.animated.superfast {
+    -webkit-animation-duration: 0.15s;
+    animation-duration: 0.15s;
+}
+
+.animated.flipOutY.fast{
+    -webkit-animation-duration: 0.2s;
+    animation-duration: 0.2s;
+}
+
 .animated.infinite {
   -webkit-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
