--- a/client/main.css
+++ b/client/main.css
@@ -63,6 +63,7 @@ html,body,#all,.question-container{
 }
 .dark .answers li > div{
     background-color: rgba(135, 240, 234, 0.27);
+    text-shadow: 2px 3px 0px rgba(0, 0, 0, 0.17);
 }
 .answers li div div.text{
     font-size:70%;
@@ -95,5 +96,5 @@ span.question-text {
     top: 40%;
     transition:0.3s;
     padding:0 40px;
-    text-shadow: 0px 26px 67px rgba(0,0,0,0.55), 0px 2px 3px rgba(0,0,0,0.15);
+    text-shadow: 0px 26px 67px rgba(0,0,0,0.55),  1px 2px 0 rgba(0,0,0,0.19);
 }
